test/func.ruse
// fail

func p(a int a) int { // error
    a
}

func f(a int) int {
    a
}

func f() int { // error
}

func main() int {
    f
    f() // error
}
